# music

./: .env.example  .eslintrc-auto-import.json  .gitignore  Cargo.toml  Dockerfile  auto-eslint.mjs  auto-imports.d.ts  components.d.ts  docker-compose.yml  docker-entrypoint.sh  electron-builder.config.ts  electron.vite.config.ts  env.d.ts  eslint.config.mjs  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  tsconfig.web.json  vercel.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: dev.yml  docs.yml  issue-helper.yml  release.yml  stale.yml
docs/: api.md  contributing.md  download.md  guide.md  index.md  native.md  socket.md
docs/.vitepress/: config.ts
docs/troubleshooting/: debug.md  macos-arm-api.md  macos-damaged.md  macos.md  ubuntu-sandbox.md  windows7.md
electron/main/: index.ts
electron/preload/: index.d.ts  index.ts
electron/server/: index.ts
native/discord-rpc-for-splayer/: Cargo.toml  index.d.ts  package.json
native/discord-rpc-for-splayer/src/: discord_core.rs  lib.rs  model.rs
native/smtc-for-splayer/: .gitignore  Cargo.toml  index.d.ts  package.json
native/smtc-for-splayer/src/: lib.rs  logger.rs  model.rs  smtc_core.rs
scripts/: build-native.mjs  dev.mjs
src/: App.vue  main.ts
src/api/: lastfm.ts  playlist.ts  rec.ts  song.ts  user.ts
src/constants/: agreement.ts
src/layout/: AppLayout.vue
src/router/: index.ts  routes.ts
src/stores/: data.ts  local.ts  music.ts  setting.ts  shortcut.ts  status.ts
src/style/: animate.scss  main.scss
src/types/: desktop-lyric.d.ts  global.d.ts  (+4 more)
(+175 files in other folders)
