[package]
name = "discord-rpc-for-splayer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.7", features = ["tokio_rt", "napi9"] }
napi-derive = "3.4"

discord-rich-presence = "1.0"
url = "2.5"

tracing = "0.1"

[build-dependencies]
napi-build = "2.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
