[package]
name = "smtc-for-splayer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.7", features = ["tokio_rt", "napi9"] }
napi-derive = "3.4"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Media_Playback", "Storage_Streams"] }

tokio = { version = "1", features = ["full"] }


[build-dependencies]
napi-build = "2.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
